--- a/pages/citytour.html
+++ b/pages/citytour.html
@@ -47,48 +47,68 @@
         </header>
         <main>
             <div class="container-fluid">
-                <div class="row text-center mb-4 justify-content-center align-items-center bg-img citytour">
+                <div class="row text-center justify-content-center align-items-center bg-img citytour">
                   <div class="col mt-4"> 
                     <h1 class="p-3 fw-bold text-center lospinos mb-0 text-wrap">CITY TOUR</h1>       
                     <hr class="py-1 lineac mt-0">
                   </div>
-                </div>  
-                <div class="container-fluid">
-                    <div  class="row">
-                        <div class="col">
-                            <h3>Plaza libertad </h3>
-              
-                            <p> Ubicada en el corazón de la cuidad, ocupa la extensión de 4 manzanas y está rodeada por una extensa plantación de tilo. Se encuentra adornada con pérgolas, bancos, farolas y estatuas, representan el Arte, el Romanticismo, la Fauna, el Amor y los Sentimientos.
-                            </p>
-                            <p> En el centro esta su rotonda principal, con la réplica del Monumento a la República ubicado en la cúspide de la Pirámide.
-                            </p>
-                            <p>  Alrededor de la Plaza Libertad se concentra el conjunto de los edificios destacados de la ciudad, como el Palacio Municipal, la fuente con el monumento al brigadier general Antonio González Balcarce, quien fue Segundo Jefe del Ejército de los Andes, el Museo del Automovilismo Juan Manuel Fangio y la Iglesia San José.
-                            </p>
-                        </div>
+                </div> 
+            </div> 
+                <div class="card mb-3  border-0 plaza">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="../resources/imagenes/citytour/plaza-libertad.jpeg" class="img-fluid rounded-start m-0" alt="Plaza Libertad">
                     </div>
-              
-                    <div  class="row">
-                        <div class="col">
-                            <h3> Parque Municipal "Cerro el Triunfo</h3>
-                            <p> Ubicado a pocas cuadras del casco urbano (intersección de las avenidas nº 31 y 32), se encuentra este Parque natural de 21 has. cubierto por un importante bosque de eucaliptos, pinos y especies arbustivas. Desde su cima puede observarse la cuidad y sus alrededores.
-                            </p>
-                            <p> Posee áreas para la práctica de deportes -velódromo, pista de atletismo, cancha de básquet-juegos infantiles, fogones, instalaciones sanitarias, monumentos y un magnifico anfiteatro natural, en donde suelen realizarse espectáculos musicales.
-                            </p>
-                            <p>  Asimismo, dentro del parque se halla el <strong> Museo Histórico Municipal</strong> con salas dedicadas a conservar el patrimonio histórico-cultural del partido y salones de exposiciones temporarias.
-                            </p>
-                        </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h3 class="card-title text-center">Plaza Libertad</h3>
+                        <p class="card-text"> <p> Ubicada en el corazón de la cuidad, ocupa la extensión de 4 manzanas y está rodeada por una extensa plantación de tilo. Se encuentra adornada con pérgolas, bancos, farolas y estatuas, representan el Arte, el Romanticismo, la Fauna, el Amor y los Sentimientos.
+                        </p>
+                        <p> En el centro esta su rotonda principal, con la réplica del Monumento a la República ubicado en la cúspide de la Pirámide.
+                        </p>
+                        <p>Alrededor de la Plaza Libertad se concentra el conjunto de los edificios destacados de la ciudad, como el Palacio Municipal, la fuente con el monumento al brigadier general Antonio González Balcarce, quien fue Segundo Jefe del Ejército de los Andes, el Museo del Automovilismo Juan Manuel Fangio y la Iglesia San José.
+                        </p></p>
+                      </div>
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            <h3> Autódromo "Juan Manuel Fangio"</h3>
-                            <p> Enclavado en la ladera noroeste de la sierra "La Barrosa" y desde su inauguración el 16 de enero de 1972, este autódromo de 4952.50 metros ha vibrado por el rugir de los motores de las principales figuras nacionales del automovilismo. En sus inmediaciones, se ubica el kartódromo "Juan Manuel Fangio" con una pista de 1025 metros.  
-                            </p>
-                        </div>
-                    </div>
+                  </div>
                 </div>
+                <hr class="city mt-4">
+                <div class="card mb-3  border-0 cerro">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="../resources/imagenes/citytour/anifiteatro.jpg" class="img-fluid rounded-start m-0" alt="Plaza Libertad">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h3 class="card-title text-center">Parque Municipal "Cerro el Triunfo</h3>
+                        <p class="card-text"> <p> Ubicado a pocas cuadras del casco urbano (intersección de las avenidas nº 31 y 32), se encuentra este Parque natural de 21 has. cubierto por un importante bosque de eucaliptos, pinos y especies arbustivas. Desde su cima puede observarse la cuidad y sus alrededores.
+                        </p>
+                        <p> Posee áreas para la práctica de deportes -velódromo, pista de atletismo, cancha de básquet-juegos infantiles, fogones, instalaciones sanitarias, monumentos y un magnifico anfiteatro natural, en donde suelen realizarse espectáculos musicales.
+                        </p>
+                        <p>  Asimismo, dentro del parque se halla el <strong> Museo Histórico Municipal</strong> con salas dedicadas a conservar el patrimonio histórico-cultural del partido y salones de exposiciones temporarias.
+                        </p></p>                        
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="city">
+                <div class="card mb-3  border-0 autodromo">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="../resources/imagenes/citytour/autodromo.jpg" class="img-fluid rounded-start m-0" alt="Plaza Libertad">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                       <h3 class="card-title text-center">Autódromo "Juan Manuel Fangio" </h3>
+                       <p class="card-text">Enclavado en la ladera noroeste de la sierra "La Barrosa" y desde su inauguración el 16 de enero de 1972, este autódromo de 4952.50 metros ha vibrado por el rugir de los motores de las principales figuras nacionales del automovilismo. En sus inmediaciones, se ubica el kartódromo "Juan Manuel Fangio" con una pista de 1025 metros.  
+                       </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+         </div>
         </main>
         <footer class="bg-dark text-center text-white">
-
             <div class="container-fluid">
             <section class="redes">
               <a class="btn btn-sm btn-outline-light m-3 facebook" target="_blank" href="https://www.facebook.com/subsecretariadeturismo.balcarce/" role="button">
