--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <strong>Balcarce</strong> cuenta la paz y la tranquilidad tipica
             de las ciudades serranas.
           </p>
-          <a class="btn btn-sm" href="#"> Leer mas</a>        
+          <a class="btn btn-sm" href="./pages/Balcarce.html"> Leer mas</a>        
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
             <div class="card-body turismo">
               <h4 class="card-title text-center">Laguna La Brava</h4>
               <p class="card-text">Ubicada en el km 40 de la ruta nacional 226, este espejo de agua es un paraiso escondido en la serranía.</p>
-              <a href="#" class="btn btn-sm">Ir a algún lugar</a>
+              <a href="./pages/laguna.html" class="btn btn-sm">Ir a algún lugar</a>
             </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
               <div class="card-body">
                 <h4 class="card-title text-center">City Tour</h4>
                 <p class="card-text">El Cerro El Triunfo,el Autodromo y Plaza Libertad, son algunos de los lugares que no podes dejar de visitar.</p>
-                <a href="#" class="btn btn-sm">Ir a algún lugar</a>
+                <a href="./pages/citytour.html" class="btn btn-sm">Ir a algún lugar</a>
               </div>
             </div>
             </div>
