--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="card-body turismo">
               <h4 class="card-title text-center">Laguna La Brava</h4>
               <p class="card-text">Ubicada en el km 40 de la ruta nacional 226, este espejo de agua es un paraiso escondido en la serranía.</p>
-              <a href="./pages/laguna.html" class="btn btn-sm">Ir a algún lugar</a>
+              <a href="./pages/laguna.html" class="btn btn-sm">Leer mas</a>
             </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
               <div class="card-body">
                 <h4 class="card-title text-center">City Tour</h4>
                 <p class="card-text">El Cerro El Triunfo,el Autodromo y Plaza Libertad, son algunos de los lugares que no podes dejar de visitar.</p>
-                <a href="./pages/citytour.html" class="btn btn-sm">Ir a algún lugar</a>
+                <a href="./pages/citytour.html" class="btn btn-sm">City Tour</a>
               </div>
             </div>
             </div>
