--- a/pages/citytour.html
+++ b/pages/citytour.html
@@ -49,7 +49,7 @@
             <div class="container-fluid">
                 <div class="row text-center justify-content-center align-items-center bg-img citytour">
                   <div class="col mt-4"> 
-                    <h1 class="p-3 fw-bold text-center lospinos mb-0 text-wrap">CITY TOUR</h1>       
+                    <h1 class="p-3 fw-bold text-center lospinos mb-0">CITY TOUR</h1>       
                     <hr class="py-1 lineac mt-0">
                   </div>
                 </div> 
@@ -76,7 +76,7 @@
                 <div class="card mb-3  border-0 cerro">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="../resources/imagenes/citytour/anifiteatro.jpg" class="img-fluid rounded-start m-0" alt="Plaza Libertad">
+                      <img src="../resources/imagenes/citytour/anifiteatro.jpg" class="img-fluid rounded-start m-0" alt="Anfiteatro Cerro el">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
@@ -95,7 +95,7 @@
                 <div class="card mb-3  border-0 autodromo">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="../resources/imagenes/citytour/autodromo.jpg" class="img-fluid rounded-start m-0" alt="Plaza Libertad">
+                      <img src="../resources/imagenes/citytour/autodromo.jpg" class="img-fluid rounded-start m-0" alt="Autodromo">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
