--- a/pages/Balcarce.html
+++ b/pages/Balcarce.html
@@ -45,7 +45,7 @@
                 </div>
               </nav>
         </header>
-        <main class="bg-light">
+        <main>
             <div class="container-fluid">
               <div class="row text-center justify-content-center align-items-center bg-img caratula-balcarce">
                 <div class="col mt-4"> 
@@ -54,42 +54,71 @@
                 </div>
                 </div>
             </div>
-            <div class="container-fluid">
-              <h2>Geografía</h2>
-              <p>
-                Balcarce es uno de los 135 partidos de la provincia argentina de Buenos Aires. Está localizado en el sudeste de la provincia. Su superficie total es de 4.120 km²
-                Limita al este con el partido de Mar Chiquita, al sur con los partidos de General Pueyrredón y General Alvarado, al oeste con el partido de Lobería, al norte con el partido de Tandil y al noreste con el partido de Ayacucho.
-                <br>
-                El territorio balcarceño se caracteriza por una serie de elevaciones rocosas de no más de 400 metros de altura. 
-                El sistema que lo conforma forma parte del cordón de Tandilia. 
-               <br>
-                Entre las formaciones serranas más importantes podemos encontrar:
-                  <ul>
-                    <li>Cerro La Virgen</li>
-                    <li>Cerro el Morro</li>
-                    <li>Sierra Larga</li>
-                    <li>Sierra Chata</li>
-                    <li>Cinco Cerros</li>
-                    <li>Cerro Amarante</li>
-                    <li>Sierra La Barrosa</li>
-                    <li>Sierra La Bachicha</li>
-                    <li>Cerro Paulino</li>
-                    <li>Sierra El Volcán</li>
-                    <li>Sierra La Vigilancia</li>
-                   
-                  </ul> 
-              </p>
-              <h2>Historia</h2>
-              <p>El partido de Balcarce fue creado por Decreto el 31 de agosto de 1865,a partir de tierras entonces pertenecientes al partido de Lobería,  y recibe este nombre en conmemoración del Brigadier Gral. Antonio González Balcarce, quien fuera segundo jefe de la Primera Expedición al Alto Perú.
-                <br>
-                 Originalmente comprendía los actuales Partidos de Balcarce, Gral. Pueyrredón y Gral. Alvarado, con 6.839 Km2 y una cantidad de 4.198 habitantes según el Censo realizado en el año 1869. 
-                <br>
-                Luego de una histórica contienda entre vecinos de las sierras y la costa sobre el lugar en que debía fundarse la ciudad cabecera, el 22 de julio de 1876 fue determinada la fundación del pueblo de San José de Balcarce. Este conflicto finalizó el 15 de octubre de 1879, cuando se sanciono la Ley de división del partido, por la que San José de Balcarce se convierte en ciudad cabecera del partido de Balcarce y Mar del Plata como cabecera del nuevo partido de General Pueyrredón.
-                <br>
-                En ese entonces, los vecinos de nuestra ciudad se reunieron en el cerrito para festejar "El Triunfo" motivo por el cual el cerro lleva dicho nombre.
-               </p>
+            <div class="card mb-3 border-0 mt-4">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="../resources/imagenes/balcarce/Balcarce.png" class="img-fluid mapa" alt="mapa provincia de buenos aires">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h3 class="card-title text-center">Geografia</h3>
+                    <hr class="balcarce">
+                    <p class="card-text">                       
+                      <p>
+                        Balcarce es uno de los 135 partidos de la provincia argentina de Buenos Aires. Está localizado en el sudeste de la provincia. Su superficie total es de 4.120 km²
+                        Limita al este con el partido de Mar Chiquita, al sur con los partidos de General Pueyrredón y General Alvarado, al oeste con el partido de Lobería, al norte con el partido de Tandil y al noreste con el partido de Ayacucho.
+                        <br>
+                        El territorio balcarceño se caracteriza por una serie de elevaciones rocosas de no más de 400 metros de altura. 
+                        El sistema que lo conforma forma parte del cordón de Tandilia. 
+                       <p>
+                        Entre las formaciones serranas más importantes podemos encontrar:
+                          <ul class="row">
+                            <div class="col-6">
+                              <li>Cerro La Virgen</li>
+                              <li>Cerro el Morro</li>
+                              <li>Sierra Larga</li>
+                              <li>Sierra Chata</li>
+                              <li>Cinco Cerros</li>
+                              <li>Cerro Amarante</li>
+                            </div>
+                           <div class="col-6">
+                              <li>Sierra La Barrosa</li>
+                              <li>Sierra La Bachicha</li>
+                              <li>Cerro Paulino</li>
+                              <li>Sierra El Volcán</li>
+                              <li>Sierra La Vigilancia</li>
+                          </div>
+                          </ul> 
+                        </p>
+                      </p>
+                    </p>                        
+                  </div>
+                </div>
+              </div>
             </div>
-               
+            <div class="card mb-3 border-0 mt-4">
+              <div class="row g-0"> 
+                <div class="col-md-4">
+                  <img src="../resources/imagenes/balcarce/escudo.png" class="img-fluid mapa" alt="escudo">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                   <h3 class="card-title text-center">Historia</h3>
+                   <p class="card-text">
+                    <hr class="balcarce">
+                    <p>El partido de Balcarce fue creado por Decreto el 31 de agosto de 1865,a partir de tierras entonces pertenecientes al partido de Lobería,  y recibe este nombre en conmemoración del Brigadier Gral. Antonio González Balcarce, quien fuera segundo jefe de la Primera Expedición al Alto Perú.
+                      <br>
+                       Originalmente comprendía los actuales Partidos de Balcarce, Gral. Pueyrredón y Gral. Alvarado, con 6.839 Km2 y una cantidad de 4.198 habitantes según el Censo realizado en el año 1869. 
+                      <br>
+                      Luego de una histórica contienda entre vecinos de las sierras y la costa sobre el lugar en que debía fundarse la ciudad cabecera, el 22 de julio de 1876 fue determinada la fundación del pueblo de San José de Balcarce. Este conflicto finalizó el 15 de octubre de 1879, cuando se sanciono la Ley de división del partido, por la que San José de Balcarce se convierte en ciudad cabecera del partido de Balcarce y Mar del Plata como cabecera del nuevo partido de General Pueyrredón.
+                      <br>
+                      En ese entonces, los vecinos de nuestra ciudad se reunieron en el cerrito para festejar "El Triunfo" motivo por el cual el cerro lleva dicho nombre.
+                     </p>  
+                   </p>
+                  </div>
+                </div>
+              </div>
+            </div>
         </main>
         <footer class="bg-dark text-center text-white mt-0">
 
