--- a/pages/Los-Pinos-San-Agustin.html
+++ b/pages/Los-Pinos-San-Agustin.html
@@ -100,7 +100,7 @@
                               <img src="../resources/imagenes/los-pinos/Delegación_Municipal_de_Los_Pinos.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
                             </div>
                             <div class="carousel-item">
-                              <img src="../resources/imagenes/los-pinos/aeroclubbalcarce.jpg" class="d-block w-100" alt="Delegacion Municipal Los Pinos">
+                              <img src="../resources/imagenes/los-pinos/aeroclubbalcarce.jpg" class="d-block w-100" alt="avionetas Aeroclub">
                             </div>
                             <div class="carousel-item">
                               <img src="../resources/imagenes/los-pinos/paisaje.jpg" class="d-block w-100" alt="Paisaje Los-Pinos">
